# python-project-49-test

./: .gitignore  Makefile  README.md  brain-calc.cast  brain-even.cast  brain-games.cast  brain-gcd.cast  brain-prime.cast  brain-progression.cast  brain_calc.cast  brain_even.cast  brain_gcd.cast  brain_prime.cast  brain_progression.cast  pyproject.toml  requirements.txt
brain_games/: engine.py
brain_games/scripts/: brain-prime.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  interface.py
hexlet_code.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
