[project]
name = "hexlet-code"
version = "0.1.0"
description = "Brain Games Project"
authors = ["Daniil Verbitskiy <danilverbitskiy@gmail.com>"]
dependencies = [
    "prompt>=0.4.1",
    "ruff>=0.9.9"
]
requires-python = ">=3.12"
readme = "README.md"

[tool.uv]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

