[project]
name = "hexlet-code"
version = "0.1.0"
description = "Brain Games Project"
authors = [
    { name = "Daniil Verbitskiy", email = "danilverbitskiy@gmail.com" }
]
dependencies = [
    "prompt>=0.4.1",
    "ruff>=0.9.9"
]
requires-python = ">=3.12"
readme = "README.md"

[tool.uv]
packages = ["brain_games"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["brain_games"]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
